force-app/main/default/objects/Opportunity_Stakeholder__c.object
<CustomObject>
    <description>Relates Contact records as stakeholders to an opportunity. This duplicates the Opportunity Contact Role, but benefits from being a custom object (record types, tabs etc)</description>
    <fields>
        <fullName>Contact_Formula__c</fullName>
        <description>Formula field with hyperlink to parent contact record.</description>
        <formula>HYPERLINK(Contact__c, Contact__r.Full_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Reference to a Contact record as stakeholder</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunity Stakeholders</relationshipLabel>
        <relationshipName>OpportunityStakeholders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Reference to the opportunity the contact is a stakeholder for.</description>
        <inlineHelpText>Please provide the Opportunity reference the Contact is a stakeholder for.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Stakeholders</relationshipLabel>
        <relationshipName>Stakeholders</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>The role the stakeholder holds in the opportunity</description>
        <inlineHelpText>Please provide the role of the Contact assumes in the opportunity.</inlineHelpText>
        <label>Role</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BDM</fullName>
                </value>
                <value>
                    <fullName>Monash Innovation representative</fullName>
                </value>
                <value>
                    <fullName>Primary Chief Investigator</fullName>
                </value>
                <value>
                    <fullName>Associate Investigator</fullName>
                </value>
                <value>
                    <fullName>Partner Investigator</fullName>
                </value>
                <value>
                    <fullName>Sponsor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Stakeholder</label>
    <nameField>
        <displayFormat>OSN-{000000}</displayFormat>
        <label>Opportunity Stakeholder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stakeholders</pluralLabel>
    <recordTypes>
        <fullName>Enterprise</fullName>
        <active>true</active>
        <description>Stakehoder roles for Enterprise opportunities</description>
        <label>Enterprise</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>